# uwachannel

./: Makefile  Makefile.am  Makefile.am~  Makefile.in  libasound_module_pcm_uwa.la  pcm_uwa.c  pcm_uwa.c~  pcm_uwa.lo  uwachannel.h  uwachannel.h~  xuwachannel_accelerator.c  xuwachannel_accelerator.h  xuwachannel_accelerator.lo  xuwachannel_accelerator_hw.h  xuwachannel_accelerator_sinit.c  xuwachannel_accelerator_sinit.lo
.deps/: pcm_uwa.Plo  xuwachannel_accelerator.Plo  xuwachannel_accelerator_sinit.Plo
.libs/: libasound_module_pcm_uwa.la  libasound_module_pcm_uwa.lai
